--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ use_little_endian = []
 [dependencies]
 bitfield = "0.13.2"
 paste = "1.0.6"
+chrono = "0.4"
 
 [dev-dependencies]
 test-case = "2.0.0"
