Add alias to generate docs

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,4 @@
 [alias]
 cov = ["tarpaulin", "--ignore-tests", "--out", "Lcov"]
+d = ["doc", "--no-deps"]
 html = ["tarpaulin", "--ignore-tests", "--out", "html"]
