--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -5,7 +5,7 @@ name = "lcms2"
 version = "0.1.0"
 
 [lib]
-crate-type = ["rlib"]
+crate-type = ["dylib", "rlib"]
 
 [features]
 default = []
@@ -20,3 +20,6 @@ paste = "1.0.6"
 
 [dev-dependencies]
 test-case = "2.0.0"
+
+[build-dependencies]
+bindgen = "0.59.2"
