--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ use_little_endian = []
 bitfield = "0.13.2"
 chrono = "0.4"
 paste = "1.0.6"
+once_cell = "1.12.0"
 
 [dev-dependencies]
 test-case = "2.0.0"
