--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,18 @@ version = "0.1.0"
 crate-type = ["rlib"]
 
 [features]
-default = []
-use_little_endian = []
+default = ["fast_floor", "ignore_black_point_tag", "half_support"]
+fast_floor = []
+half_support = []
+ignore_black_point_tag = []
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bitfield = "0.13.2"
 chrono = "0.4"
-paste = "1.0.6"
 once_cell = "1.12.0"
+paste = "1.0.6"
 
 [dev-dependencies]
 test-case = "2.0.0"
