--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ bitfield = "0.13.2"
 chrono = "0.4"
 once_cell = "1.12.0"
 paste = "1.0.6"
+dyn-clone = "1.0.6"
 
 [dev-dependencies]
 test-case = "2.0.0"
